Minor bugfix
".flip-clock-wrapper" overflowed section "clock" -> fixed
standard background now is dark grey -> while theme switching
background doesn't flash white anymore

--- a/css/flipclock.css
+++ b/css/flipclock.css
@@ -39,7 +39,7 @@
 /* Main */
 
 .flip-clock-wrapper {
-    min-height: 100%;
+    /*min-height: 100%;*/
     font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
     -webkit-user-select: none;
 }
