--- a/less/theme.less
+++ b/less/theme.less
@@ -12,7 +12,7 @@ body {
   // transition: background 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: background 0.8s ease;
   background-position: top center;
-  background: url(@standardBackground);
+  background: #222;
   font: @font;
   font-weight: @fontWeightNormal;
   text-shadow: @textShadowLight;
@@ -46,6 +46,8 @@ body {
   &.bookeh { 
     background: url(@bookeh);
     .change_clock_background(#0e2524);
+    font-weight: 300;
+    h1 { font-weight: 300 !important; }
   }
 
   // Dark Linen Theme
@@ -82,5 +84,7 @@ body {
   &.redMesh { 
     background: url(@redMesh);
     .change_clock_background(#191513);
+    font-weight: 300;
+    h1 { font-weight: 300 !important; }
   }
 }
